snapshot-tests/tests/snapshots/parser__require_newlines__basic.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ basic:1:4
  │
1 │ 0=0r=false
  │    ^ invalid integer: contains non-digit character at 0
